# swanson-lang-old

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL
.buzzy/: package.yaml
docs/: CMakeLists.txt  c.rst  conf.py  index.rst  kernel.rst  lgv_method.3  lgv_method.3.pandoc  lgv_method_set.3  lgv_method_set.3.pandoc  memory-management.rst  metamodel.rst  notes.md  prelude.rst  s0_formals.3  s0_formals.3.pandoc
docs/links/: lgv_method_set_add.3  lgv_parameter.3  s0_formals_new.3
include/: lagavulin.h  s0.h  swanson.h
include/swanson/: error.h  kernel.h  metamodel.h  s0.h
include/swanson/helpers/: metamodel.h
src/: CMakeLists.txt  liblagavulin.pc.in  libs0.pc.in  libswanson.pc.in  swanson.pc.in
src/liblagavulin/: common.c  method-set.c  method.c
src/liblagavulin/builtins/: size.c
src/libs0/: block.c  environment.c  formals.c  interface-types.c  literal.c  ref-types.c  thing.c  value-types.c
src/libswanson/: block.c  foo.c  kernel.c  s0-evaluate.c  s0-parser.c  scope.c  types.h
src/libswanson/kernel/: 00-operations.c.in  00-opsets.c.in  00-simple.c.in  00-static.c.in  01-explicit.c.in  01-opset.c.in  01-static.c.in  02-types.c.in  10-block.c.in  10-boolean.c.in  10-size.c.in  10-string.c.in  15-array.c.in  15-assignable.c.in  15-explicit.c.in  20-control.c.in  99-kernel.c.in  size.c.in
src/swan/: s0.c  s0.h  swan.c
tests/: CMakeLists.txt  helpers.h  test-kernel.c
tests/s0/: test-ast.c
tests/s0-evaluate/: .command  block-eval-01.t  dangling-reference-01.t  size-array-01.t  size-array-02.t  size-array-03.t  size-array-04.t  size-block-01.t  size-block-02.t  size-const-01.t  size-eq-01.t  size-eq-02.t  size-if-01.t  size-if-02.t  size-literal-01.t  size-literal-02.t  size-literal-error-01.t  size-literal-error-02.t  size-ne-01.t  size-ne-02.t  size-print-01.t  size-print-02.t  size-type-01.t  string-print-01.t  string-print-self-01.t  undefined-value-01.t  unknown-operation-01.t
tests/s0-evaluate/dangling-reference-01/: err  in
tests/s0-evaluate/print-string/: in
tests/s0-evaluate/self-print-string/: in
tests/s0-evaluate/size-array-01/: in
tests/s0-evaluate/size-const-01/: err  in
tests/s0-evaluate/size-literal-01/: in
tests/s0-evaluate/size-literal-02/: in
tests/s0-evaluate/size-literal-error-01/: err  in
tests/s0-evaluate/size-literal-error-02/: err  in
tests/s0-evaluate/size-print-01/: in
tests/s0-evaluate/size-print-02/: in
tests/s0-evaluate/size-type-01/: in
tests/s0-evaluate/string-print-01/: command  in
tests/s0-evaluate/undefined-value-01/: err  in
tests/s0-evaluate/unknown-operation-01/: err  in
tests/s0-verify/: .command  bad-operation-call-00.t  bad-operation-call-01.t  bad-operation-call-02.t  bad-operation-call-03.t  bad-operation-call-04.t  bad-operation-call-05.t  bad-operation-call-06.t  bad-operation-call-07.t  bad-operation-call-08.t  bad-string-constant-00.t  bad-string-constant-01.t  bad-string-constant-02.t  bad-string-constant-03.t  bad-string-constant-04.t  block-empty-00.t  block-empty-01.t  block-empty-02.t  block-empty-03.t  block-nested-01.t  block-operation-01.t  block-string-01.t  operation-call-00.t  operation-call-01.t  operation-call-02.t  operation-call-10.t  operation-call-11.t  operation-call-12.t  operation-call-20.t  operation-call-21.t  operation-call-22.t  operation-call-spaces-00.t  operation-call-spaces-01.t  operation-call-spaces-02.t  operation-call-spaces-10.t  operation-call-spaces-11.t  operation-call-spaces-12.t  operation-call-spaces-20.t  operation-call-spaces-21.t  operation-call-spaces-22.t  (+41 more)
tests/s0-verify/bad-operation-call-00/: err
tests/s0-verify/bad-operation-call-01/: err  in
tests/s0-verify/bad-operation-call-02/: err  in
tests/s0-verify/bad-operation-call-03/: err  in
tests/s0-verify/bad-operation-call-04/: in
tests/s0-verify/bad-operation-call-05/: err  in
tests/s0-verify/bad-operation-call-06/: in
tests/s0-verify/bad-operation-call-07/: in
tests/s0-verify/bad-operation-call-08/: err  in
tests/s0-verify/bad-string-constant-00/: err
tests/s0-verify/bad-string-constant-01/: err  in
tests/s0-verify/bad-string-constant-02/: err  in
tests/s0-verify/bad-string-constant-03/: in
tests/s0-verify/bad-string-constant-04/: err  in
tests/s0-verify/operation-call-00/: in  out
tests/s0-verify/operation-call-01/: in  out
tests/s0-verify/operation-call-02/: in  out
tests/s0-verify/operation-call-10/: in  out
tests/s0-verify/operation-call-11/: in  out
tests/s0-verify/operation-call-12/: in  out
tests/s0-verify/operation-call-20/: in  out
tests/s0-verify/operation-call-21/: in  out
tests/s0-verify/operation-call-22/: in  out
tests/s0-verify/operation-call-spaces-00/: in  out
tests/s0-verify/operation-call-spaces-01/: in  out
tests/s0-verify/operation-call-spaces-02/: in  out
tests/s0-verify/operation-call-spaces-10/: in  out
tests/s0-verify/operation-call-spaces-11/: in  out
(+90 files in other folders)
